--- a/intermodulationdemo/src/main/resources/de/thkoeln/intermodulationdemo/view/ModelPane.fxml
+++ b/intermodulationdemo/src/main/resources/de/thkoeln/intermodulationdemo/view/ModelPane.fxml
@@ -26,7 +26,7 @@
                <children>
                   <WebView fx:id="webView" prefHeight="130.0" prefWidth="200.0" AnchorPane.bottomAnchor="-0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children></AnchorPane>
-            <ScrollPane maxHeight="1.7976931348623157E308" minHeight="50.0" prefHeight="1000.0" prefWidth="395.0" maxWidth="395.0">
+            <ScrollPane maxHeight="1.7976931348623157E308" minHeight="70.0" prefHeight="1000.0" prefWidth="395.0" maxWidth="395.0">
                <content>
                	  <VBox fx:id="parameterVBox" styleClass="input-vbox">
                	  	<Label maxHeight="30.0" prefHeight="30.0" layoutY="8.0" text="Parameters:"
@@ -34,12 +34,14 @@
 					</Label>
                   	<FlowPane fx:id="parameterList1">
                   	</FlowPane>
+                  	<FlowPane fx:id="parameterList3">
+                  	</FlowPane>
                   	<Label maxHeight="30.0" prefHeight="30.0" layoutY="8.0" text="Noise Parameters:"
 						styleClass="label-headline4">
 					</Label>
                   	<FlowPane fx:id="parameterList2">
                   	</FlowPane>
-                  	</VBox>  
+                  </VBox>  
                </content></ScrollPane>
          </children>
       </VBox>
