--- a/intermodulationdemo/src/main/resources/de/thkoeln/intermodulationdemo/view/SpectrumPane.fxml
+++ b/intermodulationdemo/src/main/resources/de/thkoeln/intermodulationdemo/view/SpectrumPane.fxml
@@ -54,7 +54,7 @@
 					</Label>
 					<VBox layoutX="-27.0" layoutY="-36.0" spacing="20.0"
 					AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-					AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
+					AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" fx:id="vboxSpectrum">
 					<children>
 						<CheckBox styleClass="check-box-dist2" fx:id="check2" mnemonicParsing="false"
 							text="2nd Order Distortion">
